[package]
name = "index-program"
version = "0.1.2"
description = "Virtual namespaces for indexing Solana accounts on-chain"
edition = "2018"
license = "MIT"
homepage = "https://github.com/faktorfi/programs/tree/main/programs/index"
repository = "https://github.com/faktorfi/programs"
documentation = "https://faktor.finance"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "index_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
