[package]
name = "payment-program"
version = "0.1.0"
description = "Schedule one-time and recurring token transfers on Solana"
edition = "2018"
license = "MIT"
homepage = "https://github.com/faktorfi/programs/tree/main/programs/payment"
repository = "https://github.com/faktorfi/programs"
documentation = "https://faktor.finance"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_program"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
index-program = { version = "0.1.0", features = ["cpi"] }
solana-program = "1.6.9"
